samples/_failures_safe/1761427098_a8c214_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_178d1a7a.c: In function ‘main’:
./samples/SAFE/__tmp_178d1a7a.c:131:5: error: expected expression at end of input
  131 |     if (!add_compression_block(&ctx, sample_data3,
      |     ^~
./samples/SAFE/__tmp_178d1a7a.c:131:5: error: expected declaration or statement at end of input
